Analyses noms en majuscules OK. Reste à faire: noms indeterminé si majuscules ou minuscules.